<resources>
    <string name="app_name">The Last Chance</string>

    <string name="botonEmpezar">Jugar</string>
    <string name="botonScoreBoard">Lista de puntuacion</string>
    <string name="botonTienda">Tienda</string>
    <string name="botonComprar">Comprar</string>

    <string name="botonGuardar">Guardar</string>


    <string name="labelAjustes">Ajustes</string>

    <string name="labelGameOver">Game Over</string>
    <string name="labelHas">Has</string>
    <string name="labelPuntos">Puntos</string>
    <string name="labelDineros">Dinero</string>
    <string name="labelRonda">Ronda</string>



    <string name="labelNombre">Nombre</string>
    <string name="labelVolumen">Volumen</string>
    <string name="labelIdioma">Idioma</string>
    <string name="labelTema">Tema</string>
    <string name="textoTema">Oscuro</string>
    <string name="textoTemaClaro">Claro</string>


    <string name="labelFacil">Facil</string>
    <string name="labelNormal">Normal</string>
    <string name="labelDificil">Dificil</string>

    <string name="descriptorBotonAjustes">Volver a la pantalla de inicio</string>

    <string name="descriptorBotonEmpezar">Empezar Juego</string>
    <string name="labelMarcador">Marcador</string>
    <string name="toastGuardarAjustes">Ajustes guardados</string>
    <string name="toastNeedNombre">Se requiere nombre para guardar</string>
    <string name="toastNohayCambios">No has hecho cambios</string>
    <string name="toastPasta">No tienes pasta</string>
    <string name="toastQuitarTienda">No puedes quitar</string>
    <string name="labelMuerte">Muerto</string>
    <string name="labelSobrevivido">Sobrevivido</string>
    <string name="labelVolver">Volver</string>
    <string name="labelGuardarS">Guardar marcador</string>


</resources>