<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layautActivityMain"
    android:background="@drawable/imgfondoandroid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/ContenedorFragments"
        android:name="com.example.laultimaesperanza.pantallasYvistas.FragmentPrincipal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/layautMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonAjustes"
        app:layout_constraintVertical_bias="0.572"
        tools:layout="@layout/fragment_principal" />

    <ImageButton
        android:id="@+id/botonAjustes"
        android:layout_width="64dp"
        android:layout_height="66dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/descriptorBotonAjustes"
        android:onClick="ajustar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btnajustespresionado"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,ImageContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layautMenu"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="-2dp"
        android:background="@drawable/barramenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/botonTienda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/botonTienda"
            android:onClick="irTienda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/botonPrincipal"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/btntiendapresionado"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/botonScoreboard"
            android:layout_width="61dp"
            android:layout_height="54dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/botonScoreBoard"
            android:onClick="irScoreBoard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/botonPrincipal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/btnlistapresionado"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/botonPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="@string/descriptorBotonEmpezar"
            android:onClick="irPrincipal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/btnplaypressionado"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>